--- a/404.html
+++ b/404.html
@@ -1,12 +1,16 @@
 ---
 layout: default
-permalink: /404.html 
+permalink: /404.html
 ---
 
 <section class="lost-container">
   <h1>Uh oh!</h1>
   <div class="link">
-    <img class="selfie" alt="{{ site.title }}" src="{{ site.url }}/assets/images/error.gif" />
+    <img
+      class="selfie"
+      alt="{{ site.title }}"
+      src="{{ site.url }}/assets/images/error.gif"
+    />
   </div>
   <br />
   <br />
