--- a/blog.html
+++ b/blog.html
@@ -2,16 +2,11 @@
 layout: page
 title: Blog
 ---
+
 <section class="list">
-	{% if site.posts.size == 0 %}
-		<p class="text-center">Nothing published yet!</p>
-	{% else %}
-		{% for post in site.posts %}
-			{% if post.category == 'blog' %}
-				{% if post.hidden != true %}
-					{% include blog-post.html %}
-				{% endif %}
-			{% endif %}
-		{% endfor %}
-	{% endif %}
+  {% if site.posts.size == 0 %}
+  <p class="text-center">尚未发布任何内容!</p>
+  {% else %} {% for post in site.posts %} {% if post.category == 'blog' %} {% if
+  post.hidden != true %} {% include blog-post.html %} {% endif %} {% endif %} {%
+  endfor %} {% endif %}
 </section>
